data/derived/fa15/progs/unify/prog0349.ml.out
Characters 61-62:
  let fixpoint (f,b) = let f' x = (f, f b = b) in wwhile ((f'),b);;
                                                               ^
Error: This expression has type 'a but an expression was expected of type
         'a -> 'a
       The type variable 'a occurs inside 'a -> 'a
